--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
     restart: always
     tty: true
     ports:
-      - 443:80
+      - 80:80
     working_dir: /var/www
     volumes:
       - ./ws/conf:/etc/nginx/conf.d:ro
       - ./ws/logs:/var/log/nginx/
-      - ../apps/:/var/www/
+      - ./app/:/var/www/
     depends_on:
       - php
       - db
@@ -28,7 +28,7 @@ services:
     volumes:
       - ./php/conf/php.ini:/usr/local/etc/php/conf.d/php.ini
       - ./php/logs:/var/log/php7/
-      - ../apps/:/var/www/
+      - ./app/:/var/www/
     ports:
       - 127.0.0.1:9000:9000
     expose:
